modules/gdscript/tests/scripts/analyzer/errors/nullable_return.gd
func test():
    print(foo().begins_with("")) # Should error


func foo() -> String?:
    return null